--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -7,11 +7,13 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps:
+    steps:    
+    - name: Checkout
+      uses: actions/checkout@v2
     - run: |
         curl -LO https://github.com/oras-project/oras/releases/download/v0.12.0/oras_0.12.0_linux_amd64.tar.gz
         mkdir -p oras-install
         tar -zxf oras_0.12.0_*.tar.gz -C oras-install
         mv oras-install/oras /usr/local/bin
         rm -rf oras_0.12.0_*.tar.gz oras-install
-        
+      
