--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,23 +1,36 @@
-on: [workflow_dispatch]
+name: 'package-action'
+on: # rebuild any PRs and main branch changes
+  pull_request:
+#   push:
+#     branches:
+#       - main
+#       - 'releases/*'
+  workflow_dispatch:
+  release: 
 
-permissions:
-  id-token: write
-  contents: write
-  
 jobs:
-  build:
+  test: # make sure the action works on a clean machine without building
     runs-on: ubuntu-latest
-    steps:    
-    - name: Checkout
-      uses: actions/checkout@v2
-    - run: |
-        curl -LO https://github.com/oras-project/oras/releases/download/v0.12.0/oras_0.12.0_linux_amd64.tar.gz
-        mkdir -p oras-install
-        tar -zxf oras_0.12.0_*.tar.gz -C oras-install
-        mv oras-install/oras /usr/local/bin
-        rm -rf oras_0.12.0_*.tar.gz oras-install
-        oras login ghcr.io -u srahul3 -p ${{ secrets.GITHUB_TOKEN }}
-        oras push ghcr.io/srahul3/oras_artifact:1.0.0 \
-        --manifest-config /dev/null:application/vnd.actions.packages \
-        ./:application/vnd.actions.packages.layer.v1+tar
+    steps:
+      - name: Checking out!
+        uses: actions/checkout@v3
+        # with:
+        #   ref: 'Give optional branch name/SHA/tag to checkout' 
+  
+      # The ORAS cli, possibly will be baked in runner-vm and this step will not be required
+      - name: Install Oras
+        run: |
+          curl -LO https://github.com/oras-project/oras/releases/download/v0.12.0/oras_0.12.0_linux_amd64.tar.gz
+          mkdir -p oras-install/
+          tar -zxf oras_0.12.0_*.tar.gz -C oras-install/
+          mv oras-install/oras /usr/local/bin/
+          rm -rf oras_0.12.0_*.tar.gz oras-install/
+          echo "Oras installed!"
+          
+      - name: Running action   
+        run: |        
+          oras login ghcr.io -u srahul3 -p ${{ secrets.GITHUB_TOKEN }}
+          oras push ghcr.io/srahul3/oras_artifact:1.0.0 \
+          --manifest-config /dev/null:application/vnd.actions.packages \
+          ./:application/vnd.actions.packages.layer.v1+tar
       
