--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -33,4 +33,5 @@ jobs:
           oras push ghcr.io/srahul3/oras_artifact:1.0.0 \
           --manifest-config /dev/null:application/vnd.actions.packages \
           ./:application/vnd.actions.packages.layer.v1+tar
+          docker tag v1 ghcr.io/srahul3/oras_artifact:1.0.0
       
