--- a/.github/workflows/cosign.yml
+++ b/.github/workflows/cosign.yml
@@ -48,7 +48,7 @@ jobs:
           COSIGN_EXPERIMENTAL: "true"
           COSIGN_REPOSITORY: "ghcr.io/${{ github.repository_owner }}/signatures"
         run: |          
-          echo "Y" | sudo -S cosign sign \
+          echo "Y" | -S cosign sign \
           -a "repo=${{ github.repository }}" \
           -a "workflow=${{ github.workflow }}" \
           -a "ref=${{ github.sha }}" \
