--- a/.github/workflows/cosign.yml
+++ b/.github/workflows/cosign.yml
@@ -48,11 +48,12 @@ jobs:
           COSIGN_EXPERIMENTAL: "true"
           COSIGN_REPOSITORY: "ghcr.io/${{ github.repository_owner }}/signatures"
         run: |          
-          echo "Y" | -S cosign sign \
+          cosign sign \
           -a "repo=${{ github.repository }}" \
           -a "workflow=${{ github.workflow }}" \
           -a "ref=${{ github.sha }}" \
-          ghcr.io/${{ github.repository_owner }}/oras:1.0.0
+          ghcr.io/${{ github.repository_owner }}/oras:1.0.0 \
+          --yes
 
       - name: Verify the pushed tags
         run: cosign verify ghcr.io/srahul3/oras:1.0.0
