--- a/.github/workflows/cosign.yml
+++ b/.github/workflows/cosign.yml
@@ -55,7 +55,8 @@ jobs:
           ghcr.io/${{ github.repository_owner }}/oras:1.0.0 \
           --yes
 
-      - name: Verify the pushed tags
-        run: cosign verify ghcr.io/srahul3/oras:1.0.0
+      - name: Verify the pushed tags        
         env:
-          COSIGN_EXPERIMENTAL: 1
+          COSIGN_EXPERIMENTAL: "true"
+          COSIGN_REPOSITORY: "ghcr.io/${{ github.repository_owner }}/signatures"
+        run: cosign verify ghcr.io/srahul3/oras:1.0.0
