--- a/.github/workflows/cosign.yml
+++ b/.github/workflows/cosign.yml
@@ -48,8 +48,7 @@ jobs:
           COSIGN_EXPERIMENTAL: "true"
           COSIGN_REPOSITORY: "ghcr.io/${{ github.repository_owner }}/signatures"
         run: |          
-          cosign generate-key-pair ${{ github.repository }}
-          "Y" | cosign sign \
+          cosign sign \
           -a "repo=${{ github.repository }}" \
           -a "workflow=${{ github.workflow }}" \
           -a "ref=${{ github.sha }}" \
